Change in HTML and CSS code

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="container">
         <div class="bgOpacity"></div>
         <main class="content">
-            <h1>Adivinhe o número </h1>
-
-            <h2><span>OBS:</span> Você pode tentar apenas 3 vezes 😁</h2>
+            <h1>Mentalista</h1>
+            <span class="alura"> Terceiro desafio da ImersãoDev da   <a href="https://www.alura.com.br/" target="_blanck">Alura</a></span>
+            <!-- <h2><span>OBS:</span> Você pode tentar apenas 3 vezes </h2> -->
 
             <P>Digite um número de <span>0</span> a <span>10</span></P>
 
