New funtion for punctuation

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
             <!-- <h2><span>OBS:</span> Você pode tentar apenas 3 vezes </h2> -->
 
             <P>Digite um número de <span>0</span> a <span>10</span></P>
-
+            <div class="punctuation"></div>
             <div class="inputValueAndButtonToCheck">
                 <div class="reactionToResponse">
                     <span class="numberAttempts"></span>
                     <div class="sugestionNumber"></div>
+
                 </div>
+
                 <form action="">
                     <input type="text" name="" id="valueNumberSecret">
                     <button id="buttonCheck">Verificar</button>
@@ -46,7 +48,14 @@
             <nav class="links">
                 <ul>
                     <li>
-                        <a href="http://" target="_blank" "></a></li>
+                        <a target="_blank" href="https://www.instagram.com/arcanjo_dev/"><img src="./img/instagram.svg" alt="Imagem instagram"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.linkedin.com/in/arcanjo-cassiel/"><img src="./img/linkedin.svg" alt="Imagem linkedin"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/Arcanjo32cassiel"><img src="./img/github.svg" alt="Imagem github"></a>
+                    </li>
                 </ul>
             </nav>
         </footer>
