--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             <span class="alura"> Terceiro desafio da ImersãoDev da   <a href="https://www.alura.com.br/" target="_blanck">Alura</a></span>
             <!-- <h2><span>OBS:</span> Você pode tentar apenas 3 vezes </h2> -->
 
-            <P>Digite um número de <span>0</span> a <span>10</span></P>
+            <P>Digite um número maior ou igual a <span>0</span> ou menor ou igual a <span>10</span>
+                <!-- <br> -->
+                <!-- O número pode ser >= 0 ou <=10 -->
+            </P>
             <div class="punctuation"></div>
             <div class="inputValueAndButtonToCheck">
                 <div class="reactionToResponse">
@@ -29,7 +32,7 @@
                 </div>
 
                 <form action="">
-                    <input type="text" name="" id="valueNumberSecret">
+                    <input type="text" name="" id="valueNumberSecret" placeholder="Número">
                     <button id="buttonCheck">Verificar</button>
                 </form>
 
@@ -44,7 +47,7 @@
             </div>
         </div>
         <footer>
-            <p>By <span>Arcanjo Cassiel</span> </p>
+            <p>Desenvolvido por <span>Arcanjo Cassiel</span> </p>
             <nav class="links">
                 <ul>
                     <li>
@@ -60,6 +63,7 @@
             </nav>
         </footer>
     </div>
+
     <script src="./main.js "></script>
 </body>
 
