changing the font-size of the elements using the clamp function

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <form action="">
-                    <input type="text" name="" id="valueNumberSecret" placeholder="Número">
+                    <input type="number" name="" id="valueNumberSecret" placeholder="Número">
                     <button id="buttonCheck">Verificar</button>
                 </form>
 
@@ -43,6 +43,7 @@
             <!-- <i class="far fa-window-close"></i> -->
             <div class="contentModal">
                 <span class="mensagem"></span>
+                <p class="mensage_strong"></p>
                 <button id="generatenewnumber">Sortear um novo número</button>
             </div>
         </div>
