third attempt to fix input problem on mobile

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
                 </div>
 
-                <form action="">
-                    <input type="number" name="" id="valueNumberSecret" placeholder="Número">
-                    <button id="buttonCheck">Verificar</button>
-                </form>
+                <!-- <form action=""> -->
+                <input type="number" name="" id="valueNumberSecret" placeholder="Número">
+                <button id="buttonCheck">Verificar</button>
+                <!-- </form> -->
 
             </div>
 
