fourth attempt to fix input problem on mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <!-- <form action=""> -->
-                <input type="number" name="" id="valueNumberSecret" placeholder="Número">
+                <input id="valueNumberSecret" placeholder="Número">
                 <button id="buttonCheck">Verificar</button>
                 <!-- </form> -->
 
