small alteration in html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- <div class="bgOpacity"></div> -->
         <main class="content">
             <h1>Mentalista</h1>
-            <p class="question_challenge"> Você consegue adivenhar o número secreto?</p>
+            <p class="question_challenge"> Você consegue adivinhar o número secreto?</p>
             <P>Digite um número maior ou igual a <span>0</span> ou menor ou igual a <span>10</span>
 
             </P>
