--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
                 <div class="levels_childs">
                     <div class="first_level level" data-level="10"> 0 - 10</div>
-                    <div class="first_level level" data-level="50"> 0 - 50</div>
-                    <div class="first_level level" data-level="100"> 0 - 100</div>
+                    <div class="second_level level" data-level="50"> 0 - 50</div>
+                    <div class="third_level level" data-level="100"> 0 - 100</div>
                 </div>
             </section>
 
