--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <!-- <div class="bgOpacity"></div> -->
         <main class="content">
             <h1>Mentalista</h1>
-            <p class="question_challenge"> Você consegue adivinhar o número secreto?</p>
-            <p class="reward">Adivinhe o número e receba um versiculo Bíblico</p>
+            <p class="question_challenge"> Você pode me ajudar a adivinhar o número secreto?</p>
+            <p class="reward">Ao acertar o número, receba uma mensagem Bíblica</p>
             <!-- <P>Digite um número maior ou igual a <span>0</span> ou menor ou igual a <span>10</span> -->
 
             </P>
             <div class="punctuation"></div>
 
             <section class="levels">
-                <p class="choosing_a_level">Escolha um nível para enbarcar</p>
+                <p class="choosing_a_level">Escolha um nível</p>
 
                 <div class="levels_childs">
                     <div class="first_level level" data-level="10"> 0 - 10</div>
@@ -71,7 +71,7 @@
 
                         <div class="buttons">
                             <button id="continue_at_this_level">Continuar neste nivel</button>
-                            <button id="generatenewnumber">Sortear um novo número</button>
+                            <button id="generatenewnumber">Voltar para o inicio</button>
                         </div>
                     </div>
                 </div>
